src/objects/Portal_Service_Account_Preference__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portal Service Account Preferences</relationshipLabel>
        <relationshipName>Portal_Service_Account_Preferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category of the preference</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_Service__c</fullName>
        <label>Portal Service</label>
        <referenceTo>Portal_Applications__c</referenceTo>
        <relationshipLabel>Portal Service Account Preferences</relationshipLabel>
        <relationshipName>Portal_Service_Account_Preferences</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscribed</label>
        <type>Checkbox</type>
    </fields>
    <label>Portal Service Account Preference</label>
    <nameField>
        <label>Category Instance</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Service Account Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>